err/eureqa.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Eureqa-1.72.0.egg-info'...
Listing './lib/python3.5/site-packages/analysis_templates'...
Listing './lib/python3.5/site-packages/analysis_templates/example_module'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/eureqa'...
Compiling './lib/python3.5/site-packages/eureqa/__main__.py'...
***   File "./lib/python3.5/site-packages/eureqa/__main__.py", line 9
    print "Unrecognized command"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eureqa/analysis'...
Compiling './lib/python3.5/site-packages/eureqa/analysis/cards.py'...
***   File "./lib/python3.5/site-packages/eureqa/analysis/cards.py", line 96
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/eureqa/analysis/components'...
Compiling './lib/python3.5/site-packages/eureqa/analysis/components/table_builder.py'...
***   File "./lib/python3.5/site-packages/eureqa/analysis/components/table_builder.py", line 160
    print default_sort_order
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eureqa/analysis_cards'...
Listing './lib/python3.5/site-packages/eureqa/analysis_templates'...
Listing './lib/python3.5/site-packages/eureqa/analysis_templates/runner'...
Compiling './lib/python3.5/site-packages/eureqa/analysis_templates/runner/__main__.py'...
***   File "./lib/python3.5/site-packages/eureqa/analysis_templates/runner/__main__.py", line 8
    print "Nutonian Analysis Template Launcher"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eureqa/analysis_templates/runner/analysis_template_runner.py'...
***   File "./lib/python3.5/site-packages/eureqa/analysis_templates/runner/analysis_template_runner.py", line 54
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/eureqa/analysis_templates/runner/client.py'...
***   File "./lib/python3.5/site-packages/eureqa/analysis_templates/runner/client.py", line 55
    print "Installing module '%s':\n%s" % (module_name, json.dumps(params_no_password,
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eureqa/eureqa.py'...
***   File "./lib/python3.5/site-packages/eureqa/eureqa.py", line 341
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eureqa/html'...
Compiling './lib/python3.5/site-packages/eureqa/html/button.py'...
***   File "./lib/python3.5/site-packages/eureqa/html/button.py", line 64
    raise AssertionError,\
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eureqa/install_analysis_template.py'...
***   File "./lib/python3.5/site-packages/eureqa/install_analysis_template.py", line 88
    raise RuntimeError, "Invalid directory name: '%s'  Module directory names must contain only [A-Za-z0-9_].  Its first character cannot be a number." % module_name
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eureqa/search_templates.py'...
***   File "./lib/python3.5/site-packages/eureqa/search_templates.py", line 213
    except TypeError, AssertionError:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eureqa/session.py'...
***   File "./lib/python3.5/site-packages/eureqa/session.py", line 119
    print endpoint
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eureqa/utils'...
Compiling './lib/python3.5/site-packages/eureqa/utils/_analysis_template_cli.py'...
***   File "./lib/python3.5/site-packages/eureqa/utils/_analysis_template_cli.py", line 169
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eureqa/utils/modulefiles.py'...
***   File "./lib/python3.5/site-packages/eureqa/utils/modulefiles.py", line 87
    raise IOError, "Invalid argument.  Please provide a valid filesystem path."
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eureqa/utils/utils.py'...
***   File "./lib/python3.5/site-packages/eureqa/utils/utils.py", line 42
    print 'Warning: remove_files_in_directory received exception "%s"' % e
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
